--- a/templates/message/message.html.twig
+++ b/templates/message/message.html.twig
@@ -10,7 +10,7 @@
         <input type="text" name="sender" id="sender" value="{{app.user.email}}"/>
         <br/>
         <label for="receiver">To: </label>
-        <input type="text" name="receiver" id="receiver" value="{{userID}}"/>
+        <input type="text" name="receiver" id="receiver"/>
         <br/>
         {# <label for="timestamp">At: </label> #}
         {# <input typ="text" id="timestamp" name="messageTimestamp" hidden /> #}
