--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -27,7 +27,11 @@
         {% for message in messages %}
             <a href="">
                 <div class="message">
-                    <div class="sender msg-item">From: {{ message.senderID }}</div>
+                    {% for user in users %}
+                        {% if user.id == message.senderID %}
+                            <div class="sender msg-item">From: {{ user.email }}</div>
+                        {% endif %}
+                    {% endfor %}
                     <div class="messageHeader msg-item">Subject: {{ message.header }}</div>
                     <div class="messageBody msg-item">Content: {{ message.body }}</div>
                     <div class="timestamp msg-item">Sent at: {{ message.timestamp | date("Y-m-d H:i:s") }}</div>
