--- a/templates/message/message.html.twig
+++ b/templates/message/message.html.twig
@@ -4,32 +4,65 @@
 
 {% block body %}
 
-<main>
-    <form action="" method="POST">
-        <label for="sender">From: </label>
-        <input type="text" name="sender" id="sender" value="{{app.user.email}}"/>
-        <br/>
-        <label for="receiver">To: </label>
-        <input type="text" name="receiver" id="receiver"/>
-        {# <select name="receiver[]" multiple placeholder="Search...">
-            {% for user in users %}
-                {% if user.id != userID %}
-                    <option value="{{user.id}}">{{user.email}}</option>
-                {% endif %}
-            {% endfor %}
-        </select> #}
-        <br/>
-        {# <label for="timestamp">At: </label> #}
-        {# <input typ="text" id="timestamp" name="messageTimestamp" hidden /> #}
-        {# <br/> #}
-        <label for="head">Head: </label>
-        <input type="text" name="messageHead" id="head" />
-        <br/>
-        <label for="body">Body: </label><br/>
-        <textarea name="messageBody" id="body" rows="4" cols="50"></textarea>
-        <br/>
-        <button type="submit">Send Email</button>
-        <button type="reset">Delete</button>
-    </form>
-</main>
+     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/home"><h2>MailApp</h2></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-5 justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/outbox">Outbox</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/message">Send Message</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/profile">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="d-flex">
+                    <img id="pfp" src="{{ asset('uploads/'~app.user.pfp) }}" alt="pfp" width="60" style="border-radius: 100%; margin-right: 20px;"/>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <form action="" method="POST">
+            <label for="sender">From: </label>
+            <input type="text" name="sender" id="sender" value="{{app.user.email}}"/>
+            <br/>
+            <label for="receiver">To: </label>
+            <input type="text" name="receiver" id="receiver"/>
+            {# <select name="receiver[]" multiple placeholder="Search...">
+                {% for user in users %}
+                    {% if user.id != userID %}
+                        <option value="{{user.id}}">{{user.email}}</option>
+                    {% endif %}
+                {% endfor %}
+            </select> #}
+            <br/>
+            {# <label for="timestamp">At: </label> #}
+            {# <input typ="text" id="timestamp" name="messageTimestamp" hidden /> #}
+            {# <br/> #}
+            <label for="head">Head: </label>
+            <input type="text" name="messageHead" id="head" />
+            <br/>
+            <label for="body">Body: </label><br/>
+            <textarea name="messageBody" id="body" rows="4" cols="50"></textarea>
+            <br/>
+            <button type="submit">Send Email</button>
+            <button type="reset">Delete</button>
+        </form>
+    </main>
 {% endblock %}
