--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -53,11 +53,10 @@
                 <input type="text" id="custom-username" name="custom-username" value="{{app.user.username}}" />
                 <br/>
                 <label for="custom-telephone">Telephone: </label>
-                <input type="text" id="custom-telephone" name="custom-telephone" value="{{app.user.telephone}}" />
+                <input type="text" id="custom-telephone" name="custom-telephone" placeholder="Your telephone here!" value="{{app.user.telephone}}" />
                 <br/>
                 <label for="custom-pfp">Profile picture: </label>
-                <input type="file" id="custom-pfp" name="custom-pfp" value="{{userPfp}}" />
-
+                <input type="file" id="custom-pfp" name="custom-pfp" value="{{app.user.pfp}}" />
                 <div class="buttons">
                     <button type="submit">Save</button>
                     <button type="reset">Restore</button>
