--- a/templates/message/variousMessage.html.twig
+++ b/templates/message/variousMessage.html.twig
@@ -7,7 +7,7 @@
     {# <link href="{{asset('styles/messages.css')}}" type="text/css" rel="stylesheet" /> #}
 {% endblock %}
 
-{% block title %}MailApp | Send Message{% endblock %}
+{% block title %}MailApp | Send Message (various){% endblock %}
 
 {% block body %}
 
@@ -45,20 +45,20 @@
     </header>
 
     <main>
-    <h1 class="mx-auto">Send Message</h1>
+    <h1 class="mx-auto">Send Message (Various)</h1>
         <form class="mx-auto" action="" method="POST">
             <label for="sender">From: </label>
             <input type="text" name="sender" id="sender" value="{{app.user.email}}"/>
             <br/>
-            <label for="receiver">To: </label>
-            <input type="text" name="receiver" id="receiver"/>
-            {# <select name="receiver[]" multiple placeholder="Search...">
+            <label for="receiver[]">To: </label>
+            {# <input type="text" name="receiver" id="receiver"/> #}
+            <select name="receiver[]" id="receiver[]" multiple placeholder="Search...">
                 {% for user in users %}
-                    {% if user.id != userID %}
+                    {% if user.id != app.user.id %}
                         <option value="{{user.id}}">{{user.email}}</option>
                     {% endif %}
                 {% endfor %}
-            </select> #}
+            </select>
             <br/>
             {# <label for="timestamp">At: </label> #}
             {# <input typ="text" id="timestamp" name="messageTimestamp" hidden /> #}
@@ -72,6 +72,5 @@
             <button type="submit">Send Email</button>
             <button type="reset">Delete</button>
         </form>
-        <a href="/various-message">Or you can send a message to several contacts</a>
     </main>
 {% endblock %}
