--- a/templates/message/variousMessage.html.twig
+++ b/templates/message/variousMessage.html.twig
@@ -46,13 +46,13 @@
 
     <main>
     <h1 class="mx-auto">Send Message (Various)</h1>
-        <form class="mx-auto" action="" method="POST">
+        <form class="mx-auto" action="" method="POST" novalidate enctype="multipart/form-data">
             <label for="sender">From: </label>
             <input type="text" name="sender" id="sender" value="{{app.user.email}}"/>
             <br/>
-            <label for="receiver[]">To: </label>
+            <label for="receivers">To: </label>
             {# <input type="text" name="receiver" id="receiver"/> #}
-            <select name="receiver[]" id="receiver[]" multiple placeholder="Search...">
+            <select name="receivers[]" id="receivers" multiple>
                 {% for user in users %}
                     {% if user.id != app.user.id %}
                         <option value="{{user.id}}">{{user.email}}</option>
